--- a/resources/package.json
+++ b/resources/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@polymer/iron-pages": "^0.0.3",
     "@polymer/paper-card": "^0.0.3",
-    "@polymer/paper-tabs": "^0.0.3"
+    "@polymer/paper-tabs": "^0.0.3",
+    "async": "^2.6.0",
+    "web-component-tester": "^6.4.1"
   }
 }
